<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.newcategory.bottomsheet.CategoryBottomSheet">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/scroolViewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupCategory"
                    android:layout_width="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:checkedChip="@id/chipMen"
                    app:singleSelection="true"
                    android:layout_height="match_parent">


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMen"
                        style="@style/CustomChipStyle"
                        android:text="@string/men"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipWomen"
                        style="@style/CustomChipStyle"
                        android:text="@string/women"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipKids"
                        style="@style/CustomChipStyle"
                        android:text="@string/kids"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSale"
                        style="@style/CustomChipStyle"
                        android:text="@string/sale"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </com.google.android.material.chip.ChipGroup>


            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/textSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:text="@string/items"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroolViewCategory" />

        <HorizontalScrollView
            android:id="@+id/scroolViewSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSub">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupSub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@id/chipShoes"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipShoes"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shoes"
                        android:textSize="16sp" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipShirt"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t_shirt"
                        android:textSize="16sp" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipAccess"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accessories"
                        android:textSize="16sp" />

                </com.google.android.material.chip.ChipGroup>


            </LinearLayout>

        </HorizontalScrollView>


        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/apply"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroolViewSub" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>